# wheels

./: LICENSE  README.md
ML-statistics/: PCA.py
Math-linear/: eigen.py  qr.py
cs-ComputerGraphics/: render.py  shader.py
cs-ML/: PCA.py
math-LinearAlgebra/: eigen.py  qr.py
se-WEB/backend/cpp-server/: http_server.hpp  main.cpp
se-WEB/backend/cpp-server/static/: index.html
se-WEB/frontend/UI-Menu/: test.html
se-WEB/frontend/UI-TabPage/: test.html
se-WEB/frontend/js-ajax/: ajax.js
se-WEB/frontend/js-video/: README.md  test.html
web-backend/cpp-server/: CMakeLists.txt  http_server.hpp  main.cpp
web-frontend/UI-Loading/: Spin.html
web-frontend/UI-Menu/: test.html
web-frontend/UI-TabPage/: README.md  test.html
web-frontend/css3-image-text-player/: README.md  index.html  test.html
web-frontend/js-ajax/: ajax.js
web-frontend/js-array/: UT-get.js  UT-set.js  index.js
web-frontend/js-color/: HarmonyRandom.html
web-frontend/js-string/: format.js
web-frontend/js-vDom/: test.html
web-frontend/js-video/: README.md  test.html
